--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-date-format",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "description": "",
   "main": "./bundles/angular-date-format.umd.js",
   "module": "./angular-date-format.es5.js",
@@ -48,7 +48,7 @@
     "lint:demo": "tslint --project src/demo/tsconfig.json -t verbose",
     "lint:lib": "tslint --project src/lib/tsconfig.lib.json -t verbose",
     "release": "standard-version",
-    "prepublish": "npm run build && cd dist",
+    "prepublish": "npm run build",
     "docs": "compodoc -p tsconfig.doc.json -d docs",
     "size": "size-limit"
   },
