--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-date-format",
-  "version": "0.3.2",
+  "version": "1.0.0-alpha.0",
   "description": "angular date format component",
   "main": "./bundles/angular-date-format.umd.js",
   "module": "./angular-date-format.es5.js",
